// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelItem should match snapshot 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for current user i.e currentUser (you) 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        {
          "backgroundColor": "#5d89ea",
          "width": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.1)",
            "paddingLeft": 11,
          },
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={true}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="D"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for current user i.e currentUser (you) when isSearchResult 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        {
          "backgroundColor": "#5d89ea",
          "width": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.1)",
            "paddingLeft": 11,
          },
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={true}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="D"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name (you)
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for deactivated user and is currentChannel 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        {
          "backgroundColor": "#5d89ea",
          "width": 5,
        }
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          {
            "backgroundColor": "rgba(255,255,255,0.1)",
            "paddingLeft": 11,
          },
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={true}
        isArchived={true}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="D"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for deactivated user and is searchResult 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="D"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for deactivated user and not searchResults or currentChannel 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="D"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for isManualUnread 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot for no displayName 1`] = `null`;

exports[`ChannelItem should match snapshot for showUnreadForMsgs 1`] = `null`;

exports[`ChannelItem should match snapshot when there is a call 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
      <CompassIcon
        name="phone-in-talk"
        size={16}
        style={
          {
            "color": "#ffffff",
            "flex": 1,
            "marginRight": 20,
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot with custom status emoji 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
        userId="currentUser"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
      <CustomStatusEmoji
        emojiSize={16}
        style={
          [
            {
              "color": "rgba(255,255,255,0.6)",
              "opacity": 0.6,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="display_name"
        userID="currentUser"
      />
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot with draft 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        undefined,
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={true}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`ChannelItem should match snapshot with mentions and muted 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(40,66,123,0.5)"
>
  <View
    style={
      [
        {
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
        },
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="main.sidebar.channels_list.list.channel_item"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
          },
          undefined,
        ]
      }
      testID="main.sidebar.channels_list.list.channel_item.channel_id"
    >
      <ChannelIcon
        channelId="channel_id"
        hasDraft={false}
        isActive={false}
        isArchived={false}
        isInfo={false}
        isUnread={true}
        membersCount={1}
        size={24}
        statusStyle={
          {
            "backgroundColor": "#1e325c",
            "borderColor": "transparent",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.channel_icon"
        theme={
          {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        type="O"
      />
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "alignSelf": "center",
              "color": "rgba(255,255,255,0.6)",
              "fontFamily": "Open Sans",
              "fontSize": 16,
              "lineHeight": 24,
              "marginLeft": 13,
              "maxWidth": "80%",
              "paddingRight": 10,
            },
            {
              "color": "#ffffff",
              "fontWeight": "500",
              "maxWidth": "70%",
              "opacity": 1,
            },
          ]
        }
        testID="main.sidebar.channels_list.list.channel_item.display_name"
      >
        display_name
      </Text>
      <Badge
        containerStyle={
          {
            "borderColor": "#192a4d",
            "borderRadius": 14,
            "borderWidth": 0,
            "marginRight": 16,
            "right": 0,
            "top": 11,
          }
        }
        count={1}
        countStyle={
          {
            "color": "#1e325c",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
        extraPaddingHorizontal={10}
        isChannelItem={true}
        minHeight={20}
        minWidth={21}
        onPress={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "height": 21,
            "padding": 3,
            "position": "relative",
          }
        }
        testID="main.sidebar.channels_list.list.channel_item.badge"
      />
    </View>
  </View>
</TouchableHighlight>
`;
